sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:19: error: '(' expected but identifier found.
    if isSelected()
       ^